fix sidebar display on tablet

--- a/frontend/src/components/pageTitle/PageTitle.css
+++ b/frontend/src/components/pageTitle/PageTitle.css
@@ -5,7 +5,7 @@ h2 {
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   h2 {
     display: block;
   }
